Change the API endpoint for latest latencies
